# jsdoctor

./: .pre-commit-config.yaml  README.md  flags.py  flags_test.py  generator.py  genjsonfiletree.py  genjsonfiletree.py.orig  jsdoc.py  jsdoc_test.py  jsdoctor.py  linkify_test.py  namespace_test.py  patch.diff  patch2.diff  processjsontree.py  pyproject.toml  run_tests.sh  scanner.py  scanner_test.py  source.py  source_test.py  symboltypes_test.py
.github/workflows/: ci-ubuntu.yml  ci.yml  zizmor.yml
jsdoctor/: __init__.py  esprima.py  flags.py  generator.py  jsdoc.py  linkify.py  namespace.py  scanner.py  source.py  symboltypes.py
tests/: flags_test.py  jsdoc_test.py  linkify_test.py  namespace_test.py  scanner_test.py  source_test.py  symboltypes_test.py
